--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,8 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: fluid
 
+all_minifier: true
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
