--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -548,11 +548,11 @@ post:
       enable: true
       format: "{} 分钟"
       # 每个字词的长度，建议：中文≈2，英文≈5，中英混合可自行调节
-      # Average word length (chars count in word), ZH ≈ 2, EN ≈ 5
+      # Average word length (chars count in word), ZH ≈ 1, EN ≈ 1
       awl: 2
       # 每分钟阅读字数，如果大部分是技术文章可适度调低
       # Words per minute
-      wpm: 60
+      wpm: 300
 
     # 浏览量计数
     # Number of visits
@@ -626,7 +626,7 @@ post:
   math:
     # 开启后文章默认可用，自定义页面如需使用，需在 Front-matter 中指定 `math: true`
     # If you want to use math on the custom page, you need to set `math: true` in Front-matter
-    enable: false
+    enable: true
 
     # 开启后，只有在文章 Front-matter 里指定 `math: true` 才会在文章页启动公式转换，以便在页面不包含公式时提高加载速度
     # If true, only set `math: true` in Front-matter will enable math, to load faster when the page does not contain math
