--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.4.2"
+    "version": "6.2.0"
   },
   "dependencies": {
+    "gitalk": "^1.7.2",
     "hexo": "^6.2.0",
     "hexo-all-minifier": "^0.5.7",
     "hexo-deployer-git": "^3.0.0",
